--- a/src/Substrate.Generation.Test/MainWindow.xaml
+++ b/src/Substrate.Generation.Test/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Substrate.Generation.Test"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="MainWindow"
+        Height="450"
+        Width="800">
+    <Grid Background="{local:ThemeBrush Base=Blue}">
+        <Button Click="Button_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Click"/>
     </Grid>
 </Window>
