--- a/src/Substrate.Generation.Test/App.xaml
+++ b/src/Substrate.Generation.Test/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Substrate.Generation.Test"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Controls/Controls.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
