Icon Pipeline Stable

--- a/src/Substrate.Generation.Test/Controls/Templates/MyButton.xaml
+++ b/src/Substrate.Generation.Test/Controls/Templates/MyButton.xaml
@@ -15,7 +15,7 @@
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}">
                         <TextBlock Padding="10"
-                                   Text="&#xE700;"
+                                   Text="{TemplateBinding Glyph}"
                                    FontSize="18"
                                    FontFamily="Segoe MDL2 Assets"
                                    Foreground="{TemplateBinding IconBrush}" />
